--- a/tiny-nmea/Cargo.toml
+++ b/tiny-nmea/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
-authors = ["pegasis"]
+authors = ["Pegasis <me@pegasis.site>", "Kaitlyn Kenwell <redrield@gmail.com>"]
 name = "tiny-nmea"
+repository = "https://github.com/McMaster-Rocketry-Team/rust-monorepo"
+license = "MIT OR Apache-2.0"
 version = "0.1.0"
 edition = "2021"
+keywords = ["gps", "nmea"]
+categories = ["parser-implementations"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
