--- a/firmware-common/Cargo.toml
+++ b/firmware-common/Cargo.toml
@@ -7,3 +7,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bytecheck = { version = "0.6.9", default-features = false}
+defmt = "0.3"
+heapless = { version = "0.7.5", default-features = false}
+rkyv = { version = "0.7.39", default-features = false, features = [
+    "validation",
+    "size_32",
+    "alloc"
+] }
