--- a/firmware-common/Cargo.toml
+++ b/firmware-common/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+embassy-sync = { version = "0.1.0", features = [] }
 bitvec = { version = "1.0.1", default-features = false }
 bytecheck = { version = "0.6.9", default-features = false}
 defmt = "0.3"
