--- a/firmware-common/Cargo.toml
+++ b/firmware-common/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-embassy-sync = { version = "0.1.0", features = [] }
+embassy-sync = { version = "0.1.0", default-features = false }
 bitvec = { version = "1.0.1", default-features = false }
 bytecheck = { version = "0.6.9", default-features = false}
 defmt = "0.3"
@@ -21,3 +21,4 @@ nalgebra = { version = "0.32.2", default-features = false }
 ahrs = { version = "0.6.0", default-features = false }
 futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
 tiny-nmea = { path = "../tiny-nmea" }
+vlfs = { path = "../vlfs" }
