--- a/vlfs/Cargo.toml
+++ b/vlfs/Cargo.toml
@@ -2,8 +2,7 @@
 name = "vlfs"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["pegasis"]
 
 [dependencies]
 embassy-sync = { version = "0.1.0", default-features = false }
