--- a/firmware-common/Cargo.toml
+++ b/firmware-common/Cargo.toml
@@ -22,3 +22,4 @@ ahrs = { version = "0.6.0", default-features = false }
 futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
 tiny-nmea = { path = "../tiny-nmea" }
 vlfs = { path = "../vlfs" }
+rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
