--- a/firmware-common/Cargo.toml
+++ b/firmware-common/Cargo.toml
@@ -23,3 +23,4 @@ futures = { version = "0.3.17", default-features = false, features = ["async-awa
 tiny-nmea = { path = "../tiny-nmea" }
 vlfs = { path = "../vlfs" }
 rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
+micromath = { version = "2.0.0", features = ["statistics"], default-features = false }
