--- a/firmware-common/Cargo.toml
+++ b/firmware-common/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-embassy-sync = { version = "0.1.0", default-features = false }
+embassy-sync = { version = "0.2.0", default-features = false }
 bitvec = { version = "1.0.1", default-features = false }
 bytecheck = { version = "0.6.9", default-features = false}
 defmt = "0.3"
@@ -24,3 +24,4 @@ tiny-nmea = { path = "../tiny-nmea" }
 vlfs = { path = "../vlfs" }
 rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
 micromath = { version = "2.0.0", features = ["statistics"], default-features = false }
+lora-phy = "1.0.2"
