--- a/firmware-common/Cargo.toml
+++ b/firmware-common/Cargo.toml
@@ -12,11 +12,7 @@ bitvec = { version = "1.0.1", default-features = false }
 bytecheck = { version = "0.6.9", default-features = false}
 defmt = "0.3"
 heapless = { version = "0.7.5", default-features = false}
-rkyv = { version = "0.7.39", default-features = false, features = [
-    "validation",
-    "size_32",
-    "alloc"
-] }
+rkyv = { version = "0.7.39", default-features = false, features = ["size_32"] }
 nalgebra = { version = "0.32.2", default-features = false }
 ahrs = { version = "0.6.0", default-features = false }
 futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
@@ -25,3 +21,5 @@ vlfs = { path = "../vlfs" }
 rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
 micromath = { version = "2.0.0", features = ["statistics"], default-features = false }
 lora-phy = "1.0.2"
+embedded-error-chain = { version = "1.0.0", default-features = false }
+embedded-alloc = "0.5.0"
