--- a/firmware-common/Cargo.toml
+++ b/firmware-common/Cargo.toml
@@ -29,3 +29,4 @@ micromath = { version = "2.0.0", features = [
 lora-phy = "1.0.2"
 embedded-alloc = "0.5.0"
 embedded-hal-async = "0.2.0-alpha.1"
+nmea = { version = "0.4.0", default-features = false }
