--- a/vlfs/Cargo.toml
+++ b/vlfs/Cargo.toml
@@ -11,3 +11,13 @@ heapless = { version = "0.7.5", default-features = false}
 bitvec = { version = "1.0.1", default-features = false }
 futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
 rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
+
+[dev-dependencies]
+futures-executor = { version = "0.3.17", features = [ "thread-pool" ] }
+futures-test = "0.3.17"
+futures-timer = "3.0.2"
+futures-util = { version = "0.3.17", features = [ "channel" ] }
+
+# Enable critical-section implementation for std, for tests
+critical-section = { version = "1.1", features = ["std"] }
+static_cell = "1.0"
