--- a/vlfs/Cargo.toml
+++ b/vlfs/Cargo.toml
@@ -11,3 +11,4 @@ heapless = { version = "0.7.5", default-features = false}
 bitvec = { version = "1.0.1", default-features = false }
 futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
 rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
+actix-rt = "*" # { version = "1.1.1", default-features = false }
