--- a/ferraris_calibration/Cargo.toml
+++ b/ferraris_calibration/Cargo.toml
@@ -5,17 +5,18 @@ version = "0.1.0"
 edition = "2021"
 keywords = ["imu", "sensor", "calibration", "ferraris"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+rkyv-no-std  = [ "rkyv/size_32" ]
+rkyv-validation = [ "rkyv/validation" ]
+rkyv = [ "rkyv-no-std", "rkyv-validation", "rkyv/std" ]
+defmt = ["dep:defmt"]
 
 [dependencies]
 heapless = { version = "0.7.5", default-features = false }
-rkyv = { version = "0.7.39", default-features = false, features = [
-    "size_32",
-    "validation",
-] }
+rkyv = { version = "0.7", default-features = false, optional = true }
 nalgebra = { version = "0.32.2", default-features = false, features = ["libm"]}
-micromath = { version = "2.0.0", default-features = false }
-defmt = "0.3"
+defmt = { version = "0.3", optional = true }
+libm = "0.2.6"
 
 [dev-dependencies]
 approx = "0.5.1"
