--- a/firmware-common/Cargo.toml
+++ b/firmware-common/Cargo.toml
@@ -33,3 +33,4 @@ nmea = { version = "0.4.0", default-features = false }
 ferraris-calibration = { path = "../ferraris_calibration", features = [
     "defmt",
 ] }
+bitflags = "2.2.1"
