--- a/firmware-common/Cargo.toml
+++ b/firmware-common/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2021"
 embassy-sync = { version = "0.2.0", default-features = false }
 bitvec = { version = "1.0.1", default-features = false }
 defmt = "0.3"
-heapless = { version = "0.7.5", default-features = false }
+heapless = { version = "0.7.5", features = ["defmt"], default-features = false }
 rkyv = { version = "0.7.39", default-features = false, features = [
     "size_32",
     "validation",
@@ -34,3 +34,10 @@ ferraris-calibration = { path = "../ferraris_calibration", features = [
     "defmt",
 ] }
 bitflags = "2.2.1"
+
+[dev-dependencies]
+futures-executor = { version = "0.3.17", features = ["thread-pool"] }
+futures-test = "0.3.17"
+futures-timer = "3.0.2"
+futures-util = { version = "0.3.17", features = ["channel"] }
+critical-section = { version = "1.1", features = ["std"] }
