--- a/ferraris_calibration/Cargo.toml
+++ b/ferraris_calibration/Cargo.toml
@@ -17,6 +17,7 @@ rkyv = { version = "0.7", default-features = false, optional = true }
 nalgebra = { version = "0.32.2", default-features = false, features = ["libm"]}
 defmt = { version = "0.3", optional = true }
 libm = "0.2.6"
+either = { version = "1.8.1", default-features = false }
 
 [dev-dependencies]
 approx = "0.5.1"
