vl8 rpc drivers

--- a/vl8-ctrl-protocol/Cargo.toml
+++ b/vl8-ctrl-protocol/Cargo.toml
@@ -13,4 +13,7 @@ heapless = { version = "0.7.5", features = ["defmt"], default-features = false }
 defmt = "0.3"
 crc = "3.0.1"
 firmware-common = { path = "../firmware-common" }
-embassy-sync = { version = "0.2.0", features = ["defmt"] }
+embassy-sync = { version = "0.2.0", default-features = false }
+futures = { version = "0.3.17", default-features = false, features = [
+    "async-await",
+] }
