--- a/vlfs/Cargo.toml
+++ b/vlfs/Cargo.toml
@@ -11,6 +11,7 @@ heapless = { version = "0.7.5", default-features = false}
 bitvec = { version = "1.0.1", default-features = false }
 futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
 rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
+paste = "1.0.12"
 
 [dev-dependencies]
 futures-executor = { version = "0.3.17", features = [ "thread-pool" ] }
