--- a/firmware-common/Cargo.toml
+++ b/firmware-common/Cargo.toml
@@ -33,6 +33,10 @@ ferraris-calibration = { path = "../ferraris_calibration", features = [
     "defmt",
 ] }
 bitflags = "2.2.1"
+chrono = { version = "0.4.26", default-features = false }
+num-traits = { version = "0.2.15", default-features = false }
+eskf = { path = "../../eskf-rs", version = "0.2.0", default-features = false }
+libm = "0.2.7"
 
 [dev-dependencies]
 futures-executor = { version = "0.3.17", features = ["thread-pool"] }
