--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,14 @@
 [workspace]
-members = ["tiny-nmea", "firmware-common", "nyoom", "vlfs", "ferraris-calibration", "vl8-ctrl-protocol", "launch-simulator"]
+members = [
+    "tiny-nmea",
+    "firmware-common",
+    "nyoom",
+    "vlfs",
+    "ferraris-calibration",
+    "vl8-ctrl-protocol",
+    "launch-simulator",
+    "vlfs-host",
+]
 resolver = "2"
 
 [profile.dev]
