--- a/launch-simulator/Cargo.toml
+++ b/launch-simulator/Cargo.toml
@@ -10,4 +10,5 @@ bevy = { version = "0.10.1", features = ["dynamic_linking"] }
 bevy_panorbit_camera = "0.5.1"
 bevy_rapier3d = { version = "0.21.0", features = ["debug-render-3d"] }
 firmware-common = { path = "../firmware-common" }
+tokio = { version = "1.28.2", features = ["full"] }
 vlfs = { path = "../vlfs" }
