--- a/launch-simulator/Cargo.toml
+++ b/launch-simulator/Cargo.toml
@@ -12,3 +12,5 @@ bevy_rapier3d = { version = "0.21.0", features = ["debug-render-3d"] }
 firmware-common = { path = "../firmware-common" }
 tokio = { version = "1.28.2", features = ["full"] }
 vlfs = { path = "../vlfs" }
+vlfs-host = { path = "../vlfs-host" }
+critical-section = { version = "1.1", features = ["std"] }
