virtual buzzer driver

--- a/firmware-common/Cargo.toml
+++ b/firmware-common/Cargo.toml
@@ -4,7 +4,9 @@ authors = ["Pegasis <me@pegasis.site>"]
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+default = ["global-allocator"]
+global-allocator = []
 
 [dependencies]
 embassy-sync = { version = "0.2.0", default-features = false }
