--- a/launch-simulator/Cargo.toml
+++ b/launch-simulator/Cargo.toml
@@ -15,3 +15,5 @@ vlfs = { path = "../vlfs" }
 vlfs-host = { path = "../vlfs-host" }
 critical-section = { version = "1.1", features = ["std"] }
 rodio = "0.17.1"
+nalgebra = "0.32.2"
+bevy_egui = "0.20.3"
