--- a/launch-simulator/Cargo.toml
+++ b/launch-simulator/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = { version = "0.10.1", features = ["dynamic_linking"] }
+bevy = { version = "0.10.1" }
 bevy_panorbit_camera = "0.5.1"
 bevy_rapier3d = { version = "0.21.0", features = ["debug-render-3d"] }
 firmware-common = { path = "../firmware-common", default-features = false }
