--- a/firmware-common/Cargo.toml
+++ b/firmware-common/Cargo.toml
@@ -35,7 +35,7 @@ embedded-hal-async = "0.2.0-alpha.1"
 nmea = { version = "0.4.0", default-features = false }
 ferraris-calibration = { path = "../ferraris-calibration", features = [
     "defmt",
-    "rkyv-no-std",
+    # "rkyv-no-std",
 ] }
 bitflags = "2.2.1"
 chrono = { version = "0.4.26", default-features = false }
