--- a/firmware-common/Cargo.toml
+++ b/firmware-common/Cargo.toml
@@ -42,6 +42,7 @@ chrono = { version = "0.4.26", default-features = false }
 num-traits = { version = "0.2.15", default-features = false }
 eskf = { git = "https://github.com/PegasisForever/eskf-rs.git", default-features = false }
 libm = "0.2.7"
+embassy-futures = "0.1.0"
 
 [dev-dependencies]
 futures-executor = { version = "0.3.17", features = ["thread-pool"] }
