--- a/vlfs/Cargo.toml
+++ b/vlfs/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.9.0"
 edition = "2021"
 authors = ["pegasis"]
 
+[features]
+log = ["dep:log"]
+
 [dependencies]
 embassy-sync = { version = "0.2.0", default-features = false }
 defmt = "0.3"
@@ -12,6 +15,7 @@ bitvec = { version = "1.0.1", default-features = false }
 futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
 rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
 paste = "1.0.12"
+log = { version = "0.4", optional = true }
 
 [dev-dependencies]
 futures-executor = { version = "0.3.17", features = [ "thread-pool" ] }
