--- a/launch-simulator/Cargo.toml
+++ b/launch-simulator/Cargo.toml
@@ -26,3 +26,6 @@ rand = "0.8.5"
 embassy-sync = "0.2.0"
 serde = "1.0.164"
 csv = "1.2.2"
+heapless = "0.7.16"
+lora-phy = "1.2.0"
+futures = "0.3.28"
