--- a/vlfs/Cargo.toml
+++ b/vlfs/Cargo.toml
@@ -5,11 +5,13 @@ edition = "2021"
 authors = ["pegasis"]
 
 [dependencies]
-embassy = "0.1.0"
-embassy-sync = { version = "0.1.0", default-features = false }
+embassy-sync = { version = "0.2.0", default-features = false }
 defmt = "0.3"
 heapless = { version = "0.7.5", default-features = false}
 bitvec = { version = "1.0.1", default-features = false }
 futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
 rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
 actix-rt = "*" # { version = "1.1.1", default-features = false }
+
+[dev-dependencies]
+futures-test = "0.3.17"
