--- a/vlfs/Cargo.toml
+++ b/vlfs/Cargo.toml
@@ -16,6 +16,7 @@ futures = { version = "0.3.17", default-features = false, features = ["async-awa
 rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
 paste = "1.0.12"
 log = { version = "0.4", optional = true }
+vlfs-host = { path = "../vlfs-host" }
 
 [dev-dependencies]
 futures-executor = { version = "0.3.17", features = [ "thread-pool" ] }
