--- a/firmware-common/Cargo.toml
+++ b/firmware-common/Cargo.toml
@@ -54,3 +54,5 @@ futures-test = "0.3.17"
 futures-timer = "3.0.2"
 futures-util = { version = "0.3.17", features = ["channel"] }
 critical-section = { version = "1.1", features = ["std"] }
+criterion = "0.5.1"
+
