--- a/vlfs/Cargo.toml
+++ b/vlfs/Cargo.toml
@@ -17,6 +17,7 @@ futures = { version = "0.3.17", default-features = false, features = ["async-awa
 rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
 paste = "1.0.12"
 log = { version = "0.4", optional = true }
+async-iterator = "2.2.0"
 
 [dev-dependencies]
 futures-executor = { version = "0.3.17", features = [ "thread-pool" ] }
