--- a/vlfs-host/Cargo.toml
+++ b/vlfs-host/Cargo.toml
@@ -13,7 +13,8 @@ random-access-disk = { version = "3.0.0", default-features = false, features = [
 ] }
 random-access-storage = "5.0.0"
 tokio = { version = "1.28.2", features = ["full"] }
-vlfs = { path = "../vlfs", features = ["std","log"]}
+vlfs = { path = "../vlfs", features = ["std", "log"] }
+env_logger = "0.10.0"
 
 [dev-dependencies]
 tempfile = "3.6.0"
