seperate clock and delay trait

--- a/vlfs/Cargo.toml
+++ b/vlfs/Cargo.toml
@@ -18,6 +18,7 @@ rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
 paste = "1.0.12"
 log = { version = "0.4", optional = true }
 async-iterator = {version = "2.2.0", default-features = false}
+embedded-hal-async = "1.0.0"
 
 [dev-dependencies]
 futures-executor = { version = "0.3.17", features = [ "thread-pool" ] }
