--- a/firmware-common/Cargo.toml
+++ b/firmware-common/Cargo.toml
@@ -31,7 +31,7 @@ micromath = { version = "2.0.0", features = [
     "statistics",
 ], default-features = false }
 embedded-alloc = "0.5.0"
-embedded-hal-async = "1.0.0-rc.1"
+embedded-hal-async = "1.0.0"
 nmea = { version = "0.6.0", default-features = false }
 ferraris-calibration = { path = "../ferraris-calibration", features = [
     "defmt",
