--- a/vl8-ctrl-protocol/Cargo.toml
+++ b/vl8-ctrl-protocol/Cargo.toml
@@ -16,3 +16,4 @@ embassy-sync = { version = "0.5.0", default-features = false }
 futures = { version = "0.3.17", default-features = false, features = [
     "async-await",
 ] }
+embedded-hal-async = "1.0.0"
