--- a/firmware-common/Cargo.toml
+++ b/firmware-common/Cargo.toml
@@ -15,16 +15,20 @@ embassy-sync = { version = "0.5.0", default-features = false }
 bitvec = { version = "1.0.1", default-features = false }
 defmt = "0.3"
 log = { version = "0.4", optional = true }
-heapless = { version = "0.8.0", features = ["defmt-03"], default-features = false }
+heapless = { version = "0.8.0", features = [
+    "defmt-03",
+], default-features = false }
 rkyv = { version = "0.7.39", default-features = false, features = [
     "size_32",
     "validation",
 ] }
 nalgebra = { version = "0.32.2", default-features = false }
-ahrs = { version = "0.6.0", default-features = false, features = ["field_access"] }
+ahrs = { version = "0.6.0", default-features = false, features = [
+    "field_access",
+] }
 futures = { version = "0.3.17", default-features = false, features = [
     "async-await",
-] } 
+] }
 vlfs = { path = "../vlfs" }
 rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
 micromath = { version = "2.0.0", features = [
@@ -32,7 +36,13 @@ micromath = { version = "2.0.0", features = [
 ], default-features = false }
 embedded-alloc = "0.5.0"
 embedded-hal-async = "1.0.0"
-nmea = { version = "0.6.0", default-features = false }
+nmea = { version = "0.6.0", default-features = false, features = [
+    "GGA",
+    "GLL",
+    "GSA",
+    "GSV",
+    "RMC",
+] }
 ferraris-calibration = { path = "../ferraris-calibration", features = [
     "defmt",
     # "rkyv-no-std",
@@ -45,7 +55,7 @@ libm = "0.2.7"
 embassy-futures = "0.1.0"
 serde = { version = "1.0.164", default-features = false, features = ["derive"] }
 serde-json-core = "0.5.0"
-clap = { version = "4.3.11", features = ["derive"], optional= true }
+clap = { version = "4.3.11", features = ["derive"], optional = true }
 
 [dev-dependencies]
 futures-executor = { version = "0.3.17", features = ["thread-pool"] }
