--- a/firmware-common/Cargo.toml
+++ b/firmware-common/Cargo.toml
@@ -56,6 +56,7 @@ embassy-futures = "0.1.0"
 serde = { version = "1.0.164", default-features = false, features = ["derive"] }
 serde-json-core = "0.5.0"
 clap = { version = "4.3.11", features = ["derive"], optional = true }
+lora-phy = {  git = "https://github.com/lora-rs/lora-rs", default-features = false }
 
 [dev-dependencies]
 futures-executor = { version = "0.3.17", features = ["thread-pool"] }
