--- a/vlfs-host/Cargo.toml
+++ b/vlfs-host/Cargo.toml
@@ -15,6 +15,8 @@ random-access-storage = "5.0.0"
 tokio = { version = "1.28.2", features = ["full"] }
 vlfs = { path = "../vlfs", features = ["std", "log"] }
 env_logger = "0.11.3"
+log = { version = "0.4" }
+paste = "1.0.15"
 
 [dev-dependencies]
 tempfile = "3.6.0"
