--- a/vlfs-host/Cargo.toml
+++ b/vlfs-host/Cargo.toml
@@ -16,7 +16,7 @@ tokio = { version = "1.28.2", features = ["full"] }
 vlfs = { path = "../vlfs", features = ["std", "log"] }
 env_logger = "0.11.3"
 log = { version = "0.4" }
-paste = "1.0.15"
+futures = "0.3.28"
 
 [dev-dependencies]
 tempfile = "3.6.0"
