--- a/vlfs-host/Cargo.toml
+++ b/vlfs-host/Cargo.toml
@@ -17,6 +17,9 @@ vlfs = { path = "../vlfs", features = ["std", "log"] }
 env_logger = "0.11.3"
 log = { version = "0.4" }
 futures = "0.3.28"
+tokio-tungstenite = "0.21.0"
+serde = { version = "1.0.203", features = ["derive"] }
+serde_json = "1.0.117"
 
 [dev-dependencies]
 tempfile = "3.6.0"
