--- a/vlfs-host/Cargo.toml
+++ b/vlfs-host/Cargo.toml
@@ -20,6 +20,7 @@ futures = "0.3.28"
 tokio-tungstenite = "0.21.0"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
+async-iterator = { version = "2.2.0", features = ["alloc"] }
 
 [dev-dependencies]
 tempfile = "3.6.0"
