--- a/vlfs/Cargo.toml
+++ b/vlfs/Cargo.toml
@@ -5,8 +5,11 @@ edition = "2021"
 authors = ["pegasis"]
 
 [features]
+default = ["ecc"]
+# use log instead of defmt for logging
 log = ["dep:log"]
 std = []
+ecc = []
 
 [dependencies]
 embassy-sync = { version = "0.5.0", default-features = false }
