--- a/firmware-common/Cargo.toml
+++ b/firmware-common/Cargo.toml
@@ -18,7 +18,7 @@ log = { version = "0.4", optional = true }
 heapless = { version = "0.8.0", features = [
     "defmt-03",
 ], default-features = false }
-rkyv = { version = "0.7.39", default-features = false, features = [
+rkyv = { version = "0.7.43", default-features = false, features = [
     "size_32",
     "validation",
 ] }
@@ -57,6 +57,7 @@ serde = { version = "1.0.164", default-features = false, features = ["derive"] }
 serde-json-core = "0.5.0"
 clap = { version = "4.3.11", features = ["derive"], optional = true }
 lora-phy = {  git = "https://github.com/lora-rs/lora-rs", default-features = false }
+paste = "1.0.15"
 
 [dev-dependencies]
 futures-executor = { version = "0.3.17", features = ["thread-pool"] }
