--- a/firmware-common/Cargo.toml
+++ b/firmware-common/Cargo.toml
@@ -58,6 +58,9 @@ serde-json-core = "0.5.0"
 clap = { version = "4.3.11", features = ["derive"], optional = true }
 lora-phy = {  git = "https://github.com/lora-rs/lora-rs", default-features = false }
 paste = "1.0.15"
+async-iterator = { version = "2.2.0", default-features = false }
+approx = { version = "0.5.1", default-features = false }
+either = { version = "1.12.0", default-features = false }
 
 [dev-dependencies]
 futures-executor = { version = "0.3.17", features = ["thread-pool"] }
