--- a/vl-cli/Cargo.toml
+++ b/vl-cli/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.86"
-rustyline = "14.0.0"
+clap = { version = "4.5.7", features = ["derive"] }
+clap-num = "1.1.1"
+directories = "5.0.1"
+rustyline = { version = "14.0.0", features = ["derive"] }
 tokio = { version = "1.38.0", features = ["full"] }
 tokio-serial = "5.4.4"
