--- a/firmware-common/Cargo.toml
+++ b/firmware-common/Cargo.toml
@@ -61,6 +61,7 @@ paste = "1.0.15"
 approx = { version = "0.5.1", default-features = false }
 either = { version = "1.12.0", default-features = false }
 crc = "3.2.1"
+embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
 
 [dev-dependencies]
 futures-executor = { version = "0.3.17", features = ["thread-pool"] }
