--- a/vl-cli/Cargo.toml
+++ b/vl-cli/Cargo.toml
@@ -16,3 +16,5 @@ tokio-serial = "5.4.4"
 firmware-common = {path = "../firmware-common", default-features = false, features = ["log"]}
 embassy-sync = "0.6.0"
 embedded-hal-async = "1.0.0"
+env_logger = "0.11.3"
+log = "0.4.21"
