--- a/vl-simulink-bridge/Cargo.toml
+++ b/vl-simulink-bridge/Cargo.toml
@@ -12,3 +12,5 @@ embedded-hal-async = "1.0.0"
 rand = "0.8.5"
 embassy-sync = { version = "0.6.0", features = ["std"] }
 critical-section = { version = "1.1", features = ["std"] }
+tokio = "1.38.0"
+embedded-io-async = { version = "0.6.1", features = ["alloc", "std"] }
