remove vl8 control protocol from workspace

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,9 @@ members = [
     "nyoom",
     "vlfs",
     "ferraris-calibration",
-    "vl8-ctrl-protocol", 
-    "vl-cli", "vl-simulink-bridge",
+    # "vl8-ctrl-protocol", 
+    "vl-cli",
+    "vl-simulink-bridge",
     # "launch-simulator",
 ]
 resolver = "2"
