--- a/firmware-common/Cargo.toml
+++ b/firmware-common/Cargo.toml
@@ -78,3 +78,9 @@ futures-timer = "3.0.2"
 futures-util = { version = "0.3.17", features = ["channel"] }
 critical-section = { version = "1.1", features = ["std"] }
 tokio = { version = "1.39.1", features = ["full"] }
+
+[profile.test]
+opt-level = 0
+debug = "full"
+debug-assertions = true
+overflow-checks = true
