--- a/firmware-common/Cargo.toml
+++ b/firmware-common/Cargo.toml
@@ -66,6 +66,7 @@ cryptoxide = { version = "0.4.4", default-features = false, features = ["chacha"
 lora-modulation = "0.1.4"
 packed_struct = { version = "0.10.1", default-features = false }
 calculate-required-bits = { path = "../calculate-required-bits" }
+heatshrink = "0.2.0"
 
 [dev-dependencies]
 firmware-common = { version = "*", path = ".", default-features = false, features = [
@@ -78,6 +79,7 @@ futures-timer = "3.0.2"
 futures-util = { version = "0.3.17", features = ["channel"] }
 critical-section = { version = "1.1", features = ["std"] }
 tokio = { version = "1.39.1", features = ["full"] }
+rand = "0.8.5"
 
 [profile.test]
 opt-level = 0
