--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ members = [
     "ferraris-calibration",
     # "vl8-ctrl-protocol", 
     "vl-cli",
-    "vl-simulink-bridge", "calculate-required-bits",
+    # "vl-simulink-bridge", 
+    "calculate-required-bits",
     # "launch-simulator",
 ]
 resolver = "2"
