--- a/firmware-common/Cargo.toml
+++ b/firmware-common/Cargo.toml
@@ -70,6 +70,8 @@ heatshrink = "0.2.0"
 int-enum = "1.1.2"
 reed-solomon = "0.2.1"
 biquad = "0.4.2"
+icao-isa = "0.1.2"
+icao-units = "0.1.3"
 
 [dev-dependencies]
 firmware-common = { version = "*", path = ".", default-features = false, features = [
@@ -84,3 +86,4 @@ critical-section = { version = "1.1", features = ["std"] }
 tokio = { version = "1.39.1", features = ["full"] }
 rand = "0.8.5"
 mockall = "0.13.0"
+plotters = "0.3.6"
