--- a/vl-cli/Cargo.toml
+++ b/vl-cli/Cargo.toml
@@ -19,3 +19,6 @@ embedded-hal-async = "1.0.0"
 env_logger = "0.11.3"
 log = "0.4.21"
 crc = "3.2.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+rand = "0.8.5"
