--- a/vl-cli/Cargo.toml
+++ b/vl-cli/Cargo.toml
@@ -23,3 +23,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rand = "0.8.5"
 csv = "1.3.0"
+either = "1.13.0"
+map-range = "0.1.2"
