--- a/firmware-common/Cargo.toml
+++ b/firmware-common/Cargo.toml
@@ -5,8 +5,6 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-# default = ["global-allocator", "defmt"]
-global-allocator = []
 defmt = []
 log = ["dep:log", "vlfs/log"]
 std = []
@@ -36,7 +34,6 @@ rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
 micromath = { version = "2.0.0", features = [
     "statistics",
 ], default-features = false }
-embedded-alloc = "0.5.0"
 embedded-hal-async = "1.0.0"
 nmea = { version = "0.6.0", default-features = false, features = [
     "GGA",
@@ -57,16 +54,15 @@ libm = "0.2.7"
 serde = { version = "1.0.164", default-features = false, features = ["derive"] }
 serde-json-core = "0.5.0"
 lora-phy = {  git = "https://github.com/lora-rs/lora-rs", default-features = false }
+lora-modulation = {  git = "https://github.com/lora-rs/lora-rs", default-features = false }
 paste = "1.0.15"
 approx = { version = "0.5.1", default-features = false }
 either = { version = "1.12.0", default-features = false }
 crc = "3.2.1"
 embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
 cryptoxide = { version = "0.4.4", default-features = false, features = ["chacha"] }
-lora-modulation = "0.1.4"
 packed_struct = { version = "0.10.1", default-features = false }
 calculate-required-bits = { path = "../calculate-required-bits" }
-heatshrink = "0.2.0"
 int-enum = "1.1.2"
 reed-solomon = "0.2.1"
 biquad = "0.4.2"
