--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,8 @@ resolver = "2"
 [profile.dev]
 opt-level = 1
 
-[profile.dev.package."*"]
-opt-level = 3
+#[profile.dev.package."*"]
+#opt-level = 3
 
 [profile.release]
 lto = true
