--- a/firmware-common/Cargo.toml
+++ b/firmware-common/Cargo.toml
@@ -70,6 +70,8 @@ reed-solomon = "0.2.1"
 biquad = "0.4.2"
 icao-isa = "0.1.2"
 icao-units = "0.1.3"
+cmsis_dsp = {git = "https://github.com/McMaster-Rocketry-Team/cmsis_dsp.rs.git"}
+half = { version = "2.4.1", default-features = false }
 
 [dev-dependencies]
 firmware-common = { version = "*", path = ".", default-features = false, features = [
