--- a/vl-cli/Cargo.toml
+++ b/vl-cli/Cargo.toml
@@ -7,22 +7,17 @@ edition = "2021"
 anyhow = "1.0.86"
 clap = { version = "4.5.7", features = ["derive"] }
 clap-num = "1.1.1"
-defmt = "0.3.8"
+defmt = "0.3"
 directories = "5.0.1"
 embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
-rustyline = { version = "14.0.0", features = ["derive"] }
 tokio = { version = "1.38.0", features = ["full"] }
 tokio-serial = "5.4.4"
 firmware-common = {path = "../firmware-common", default-features = false, features = ["log"]}
-embassy-sync = "0.6.0"
 embedded-hal-async = "1.0.0"
 env_logger = "0.11.3"
 log = "0.4.21"
-crc = "3.2.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-rand = "0.8.5"
-csv = "1.3.0"
-either = "1.13.0"
-map-range = "0.1.2"
 vlfs = { path = "../vlfs", default-features = false }
+vl-host-lib = { path = "../vl-host-lib" }
+chrono = "0.4.38"
