--- a/vl-host-lib/Cargo.toml
+++ b/vl-host-lib/Cargo.toml
@@ -21,3 +21,6 @@ rand = "0.8.5"
 csv = "1.3.0"
 either = "1.13.0"
 map-range = "0.1.2"
+futures-core = "0.3.30"
+futures-util = "0.3.30"
+async-stream = "0.3.5"
