--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -43,6 +43,11 @@
         "usernamehw.errorlens",
         "rust-lang.rust-analyzer"
       ]
+    },
+    "codespaces": {
+      "openFiles": [
+        "README.md"
+      ]
     }
   }
   // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
