create ozys app project

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -9,7 +9,8 @@
     "ryanluker.vscode-coverage-gutters",
     "fill-labs.dependi",
     "usernamehw.errorlens",
-    "rust-lang.rust-analyzer"
+    "rust-lang.rust-analyzer",
+    "tauri-apps.tauri-vscode"
   ],
   // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
   "unwantedRecommendations": []
