--- a/ozys-app/src-tauri/Cargo.toml
+++ b/ozys-app/src-tauri/Cargo.toml
@@ -22,4 +22,8 @@ tauri = { version = "2", features = [] }
 tauri-plugin-shell = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+async-trait = "0.1.83"
+anyhow = "1.0.92"
+tokio = "1.41.0"
+
 
