--- a/ozys-app/package.json
+++ b/ozys-app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-log": "~2",
     "@tauri-apps/plugin-shell": "^2",
     "flexlayout-react": "^0.8.1",
     "jotai": "^2.10.2",
