--- a/ozys-app/package.json
+++ b/ozys-app/package.json
@@ -6,13 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "tauri": "tauri"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-log": "~2",
-    "@tauri-apps/plugin-shell": "^2",
     "flexlayout-react": "^0.8.1",
     "jotai": "^2.10.2",
     "lodash-es": "^4.17.21",
@@ -21,7 +17,6 @@
     "rooks": "^7.14.1"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^2",
     "@types/lodash-es": "^4",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
