--- a/ozys-app/package.json
+++ b/ozys-app/package.json
@@ -20,6 +20,7 @@
     "@types/lodash-es": "^4",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/w3c-web-usb": "^1.0.10",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
