--- a/ozys-app/package.json
+++ b/ozys-app/package.json
@@ -12,6 +12,8 @@
     "flexlayout-react": "^0.8.1",
     "jotai": "^2.10.2",
     "lodash-es": "^4.17.21",
+    "mobx": "^6.13.5",
+    "mobx-react-lite": "^4.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rooks": "^7.14.1"
