--- a/ozys-app/package.json
+++ b/ozys-app/package.json
@@ -16,6 +16,7 @@
     "mobx-react-lite": "^4.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-use": "^17.5.1",
     "rooks": "^7.14.1"
   },
   "devDependencies": {
