--- a/ozys-app/package.json
+++ b/ozys-app/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@thi.ng/dsp": "^4.7.53",
     "comlink": "^4.4.2",
     "dexie": "^4.0.10",
     "flexlayout-react": "^0.8.1",
@@ -19,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-use": "^17.5.1",
+    "ring-buffer-ts": "^1.2.0",
     "rooks": "^7.14.1"
   },
   "devDependencies": {
