--- a/ozys-app/package.json
+++ b/ozys-app/package.json
@@ -11,16 +11,17 @@
   },
   "dependencies": {
     "@thi.ng/dsp": "^4.7.53",
+    "async-mutex": "^0.5.0",
     "comlink": "^4.4.2",
     "dexie": "^4.0.10",
     "flexlayout-react": "^0.8.1",
+    "immer": "^10.1.1",
     "jotai": "^2.10.2",
     "lodash-es": "^4.17.21",
     "mobx": "^6.13.5",
     "mobx-react-lite": "^4.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-use": "^17.5.1",
     "ring-buffer-ts": "^1.2.0",
     "rooks": "^7.14.1"
   },
